--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
 		<div class="mySlides fade">
           <div class="Slide_Number">1 / 3</div>
-            <img class="Slide_Show_Images" src="stylesheet/images/Tdub.jpg" style="width:100%">
+            <img class="Slide_Show_Images" src="stylesheet/images/personal.jpg" style="width:100%">
               <div class="text">I'm available to assist you on your project!</div>
         </div>
         
